--- a/index.css
+++ b/index.css
@@ -1,6 +1,3 @@
-body {
-	background-color: rgba(21, 13, 28, 0.85);
-}
 .container {
 	padding: 1cm 4cm;
 	/* border: 2px solid black; */
@@ -8,14 +5,13 @@ body {
 .card {
 	margin-bottom: 1cm;
 	border-radius: 5px;
-	box-shadow: 0 0 5px white;
+	box-shadow: 0 0 5px 1px #eaeaea;
 }
 .card .card-title {
 	padding: 0.5cm 0;
 	font-weight: 300;
 	font-size: 50px;
 	text-align: center;
-	margin: 0;
 	color: teal;
 }
 #input {
@@ -44,20 +40,23 @@ a#addBtn {
 	outline: none;
 }
 li {
-	margin-bottom: 5px;
+	margin-bottom: 8px;
 	padding: 10px 20px;
 	font-size: 20px;
 	font-weight: 400;
 	list-style: none;
-	border-radius: 10px;
-	border: 1px solid white;
-	border-radius: 5px;
-	background-color: white;
+	border-radius: 3px;
+	cursor: pointer;
 }
 li:hover {
-	box-shadow: 0 0 5px white;
+	background-color: rgb(235, 229, 229);
 }
-#timeSpan {
+
+input[type="checkbox"] + lable {
+	border: 2px solid red;
+}
+
+.timeSpan {
 	float: right;
 	margin-right: 10px;
 	color: slategrey;
